[gd_scene load_steps=22 format=3 uid="uid://dck3uk6nmem87"]

[ext_resource type="Script" path="res://scripts/personaje.gd" id="1_jy5jl"]
[ext_resource type="Texture2D" uid="uid://dahx2kyx7wj2l" path="res://icon.svg" id="2_agb3i"]
[ext_resource type="SpriteFrames" uid="uid://cvbgtcn1i3hpp" path="res://assets/Skeleton_Head_Idle/head_only_frames.tres" id="3_qx0fk"]
[ext_resource type="Script" path="res://state_machine.gd" id="10_xchf0"]
[ext_resource type="Script" path="res://Jump.gd" id="11_byd1s"]
[ext_resource type="Script" path="res://idle_jumping_state.gd" id="11_kb7h2"]
[ext_resource type="Script" path="res://idle_walk_state.gd" id="11_kj1bn"]
[ext_resource type="Script" path="res://walking_state.gd" id="11_kpxvq"]
[ext_resource type="Script" path="res://DeathState.gd" id="18_xyrrx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ogtb7"]
size = Vector2(199, 307)

[node name="CharacterBody2D" type="CharacterBody2D"]
position = Vector2(429, 263)
floor_stop_on_slope = false
floor_max_angle = 0.261799
script = ExtResource("1_jy5jl")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(41, 2)
texture = ExtResource("2_agb3i")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(1, 1, 0, 1)
position = Vector2(13.5, -19.5)
shape = SubResource("RectangleShape2D_ogtb7")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.75, 0.75)

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="SkeletonAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(20, -28)
scale = Vector2(0.597656, 0.597656)
sprite_frames = ExtResource("3_qx0fk")
animation = &"jump"

[node name="PlayerMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("10_xchf0")
current_state = NodePath("IdleWalkState")

[node name="JumpingState" type="Node" parent="PlayerMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("11_byd1s")
actor = NodePath("../..")

[node name="WalkingState" type="Node" parent="PlayerMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("11_kpxvq")
actor = NodePath("../..")

[node name="IdleWalkState" type="Node" parent="PlayerMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("11_kj1bn")
actor = NodePath("../..")

[node name="DeathState" type="Node" parent="PlayerMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("18_xyrrx")
actor = NodePath("../..")

[node name="JumpMachine" type="Node" parent="."]

[node name="IdleJumpingState" type="Node" parent="JumpMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("11_kb7h2")
actor = NodePath("../..")
